--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 		<nav class="header-menu">
 			<ul>
 			
-				<li><a href="/">主页</a></li>
+				<li><a href="/">技术支持</a></li>
 	        
-				<li><a href="/tags/随笔.html">随笔</a></li>
+				<li><a href="/tags/随笔.html">隐私政策</a></li>
 	        
 			</ul>
 		</nav>
